
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telecom-churn-defense"
version = "0.1.0"
description = "Predict churn risk from usage, ticketing, and billing signals for proactive save workflows."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
